nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers: 
        - name: nginx-container
          image: nginx:latest
          ports:
          - containerPort: 80
          livenessProbe: # probes
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:  # Resources & Quotas
            requests:
              cpu: 100m
              memory: 126Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
          - mountPath: /var/www/html
            name: app-storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
           claimName: local-pvc
